# cynara

./: .gitignore  AUTHORS  CMakeLists.txt  ExternalPluginInterface_8h.html  ExternalPluginInterface_8h.js  ExternalPluginInterface_8h_source.html  LICENSE  README  _external_plugin_interface_8h.html  _external_plugin_interface_8h.js  _external_plugin_interface_8h_source.html  admin-api_8cpp_8example-example.html  annotated.html  annotated.js  changelog  classCynara_1_1ClientPluginInterface.html  classCynara_1_1ClientPluginInterface.js  classCynara_1_1ExternalPluginInterface.html  classCynara_1_1ExternalPluginInterface.js  classCynara_1_1ServicePluginInterface.html  classCynara_1_1ServicePluginInterface.js  class_cynara_1_1_client_plugin_interface.html  class_cynara_1_1_client_plugin_interface.js  class_cynara_1_1_external_plugin_interface.html  class_cynara_1_1_external_plugin_interface.js  class_cynara_1_1_service_plugin_interface.html  class_cynara_1_1_service_plugin_interface.js  classes.html  client-api_8cpp_8example-example.html  client-async-api_8cpp_8example-example.html  custom.css  cynara-admin-types_8h.html  cynara-admin-types_8h.js  cynara-admin-types_8h_source.html  cynara-admin_8example-example.html  cynara-admin_8h.html  cynara-admin_8h.js  cynara-admin_8h_source.html  cynara-agent_8h.html  cynara-agent_8h.js  (+80 more)
pkgconfig/cynara-agent/: CMakeLists.txt  cynara-agent.pc.in
pkgconfig/cynara-creds-gdbus/: CMakeLists.txt  cynara-creds-gdbus.pc.in
pkgconfig/cynara-plugin/: CMakeLists.txt  cynara-plugin.pc.in
src/: CMakeLists.txt
src/admin/: CMakeLists.txt  admin-api.cpp
src/admin/api/: ApiInterface.h  admin-api.cpp
src/admin/logic/: Logic.cpp  Logic.h  OfflineLogic.cpp  OfflineLogic.h  OnlineLogic.cpp  OnlineLogic.h  Utility.h
src/agent/: CMakeLists.txt
src/agent/api/: ApiInterface.h  agent-api.cpp
src/agent/logic/: Logic.cpp  Logic.h
src/agent/socket/: AgentSocketClient.cpp  AgentSocketClient.h
src/chsgen/: CMakeLists.txt  ChecksumGenerator.cpp  ChecksumGenerator.h  main.cpp
src/client/: CMakeLists.txt  client-api.cpp  cynara-client-interface.h
src/client-async/: CMakeLists.txt
src/client-async/api/: ApiInterface.h  client-async-api.cpp
src/client-async/callback/: ResponseCallback.cpp  ResponseCallback.h  StatusCallback.cpp  StatusCallback.h
src/client-async/check/: CheckData.h
src/client-async/logic/: Logic.cpp  Logic.h
src/client-async/sequence/: SequenceContainer.cpp  SequenceContainer.h
src/client-async/sockets/: SocketClientAsync.cpp  SocketClientAsync.h
src/client-common/: CMakeLists.txt
src/client-common/cache/: CacheInterface.h  CapacityCache.cpp  CapacityCache.h  MonitorCache.cpp  MonitorCache.h
src/client-common/configuration/: Configuration.h
src/client-common/exceptions/: TryCatch.h
src/client-common/plugins/: NaiveInterpreter.cpp  NaiveInterpreter.h  PluginInterface.h
src/client/api/: ApiInterface.h  client-api.cpp
src/client/bootstrap/: cynara-client-bootstrap.cpp  cynara-client-bootstrap.h
src/client/cache/: CacheInterface.h  CapacityCache.cpp  CapacityCache.h  NaiveInterpreter.h  NoCache.cpp  NoCache.h  PolicyGetter.cpp  PolicyGetter.h
src/client/logic/: Logic.cpp  Logic.h
src/client/sockets/: Socket.h  SocketClient.cpp  SocketClient.h  client-common.cpp
src/common/: CMakeLists.txt  common.cpp  common.h
src/common/attributes/: attributes.h  debug_attributes.h
src/common/config/: PathConfig.cpp  PathConfig.h
src/common/containers/: BinaryQueue.cpp  BinaryQueue.h  RawBuffer.h  SharedString.cpp  SharedString.h  binary_queue.cpp  binary_queue.h
src/common/error/: api.cpp
src/common/exceptions/: AccessDeniedException.h  DatabaseException.h  (+31 more)
src/cyad/: AdminApiWrapper.cpp  AdminApiWrapper.h  AdminLibraryInitializationFailedException.h  AdminPolicyParser.cpp  AdminPolicyParser.h  BaseAdminApiWrapper.h  BaseDispatcherIO.h  BaseErrorApiWrapper.h  CMakeLists.txt  CommandsDispatcher.cpp  CommandsDispatcher.h  Cyad.cpp  Cyad.h  CynaraAdminPolicies.cpp  CynaraAdminPolicies.h  DispatcherIO.cpp  DispatcherIO.h  ErrorApiWrapper.cpp  ErrorApiWrapper.h  PolicyTypeTranslator.cpp  PolicyTypeTranslator.h  main.cpp
src/include/: CMakeLists.txt  cynara-admin-error.h  cynara-admin-types.h  cynara-admin.h  cynara-agent.h  cynara-client-async.h  cynara-client-error.h  cynara-client-plugin.h  cynara-client.h  cynara-creds-commons.h  cynara-creds-dbus.h  cynara-creds-gdbus.h  cynara-creds-self.h  cynara-creds-socket.h  cynara-error.h  cynara-limits.h  cynara-monitor.h  cynara-offline-admin.h  cynara-plugin.h  cynara-policy-types.h  cynara-session.h
src/monitor/: CMakeLists.txt
src/service/: CMakeLists.txt
src/storage/: BucketDeserializer.cpp  BucketDeserializer.h  Buckets.h  CMakeLists.txt  ChecksumStream.cpp  ChecksumStream.h  ChecksumValidator.cpp  ChecksumValidator.h  InMemoryStorageBackend.cpp  InMemoryStorageBackend.h  Integrity.cpp  Integrity.h  Storage.cpp  Storage.h  StorageBackend.h  StorageDeserializer.cpp  StorageDeserializer.h  StorageSerializer.cpp  StorageSerializer.h
systemd/: CMakeLists.txt  cynara-admin.socket  cynara-admin.socket.in  cynara-agent.socket  cynara-agent.socket.in  cynara-monitor-get.socket  cynara-monitor-get.socket.in  cynara.service  cynara.socket  cynara.socket.in  cynara.target
systemd/sockets.target.wants/: cynara-admin.socket  cynara-agent.socket  cynara.socket
test/: Benchmark.h  CMakeLists.txt  TestEventListenerProxy.cpp  TestEventListenerProxy.h  helpers.cpp  helpers.h  tests.cpp
test/chsgen/: ChsgenCommandlineTest.h  checksumgenerator.cpp
test/cyad/: CyadCommandlineDispatcherTest.h  CyadCommandlineTest.h  FakeAdminApiWrapper.h  FakeDispatcherIO.h  FakeErrorApiWrapper.h  commandline.cpp  commandline_errors.cpp  commandline_options.cpp  commandline_short.cpp  commands_dispatcher.cpp  helpers.cpp  helpers.h  policy_collection.cpp  policy_parser.cpp
test/shared-string/: SharedStringEx.cpp  SharedStringEx.h  SharedStringTests.cpp
test/test-common/: BaseCommandlineTest.h  QuietCommandlineTest.h
test/tools/: cynara-db-migration-tests
test/types/: policykey.cpp
(+375 files in other folders)
